--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,16 @@ sudo: false
 python:
   - "2.7"
   - "3.6"
+  - "3.7-dev"
+  - "pypy"
+  - "pypy-5.3.1"
+
+matrix:
+    allow_failures:
+        - python: 3.7-dev
+        - python: pypy
+        - python: pypy-5.3.1
+
 
 install:
   - pip install pipenv
